--- a/backend/codingpup/requirements.txt
+++ b/backend/codingpup/requirements.txt
@@ -1,12 +1,42 @@
 asgiref==3.6.0
+attrs==23.1.0
+bcrypt==4.0.1
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==41.0.1
+distro==1.8.0
 Django==4.2
 django-phonenumber-field==7.0.2
 django-phonenumbers==1.0.1
 django-rest-framework==0.1.0
+django-rest-passwordreset==1.3.0
 djangorestframework==3.14.0
+docker==6.1.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+drf-yasg==1.21.6
 ez-setup==0.9
+idna==3.4
+inflection==0.5.1
+jsonschema==3.2.0
+packaging==23.1
+paramiko==3.2.0
 phonenumbers==8.13.8
 Pillow==9.5.0
 psycopg2-binary==2.9.6
+pycparser==2.21
+Pygments==2.15.1
+PyNaCl==1.5.0
+pyrsistent==0.19.3
+python-dotenv==0.21.1
 pytz==2023.3
+PyYAML==5.4.1
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.3
+texttable==1.6.7
+uritemplate==4.1.1
+urllib3==2.0.3
+websocket-client==0.59.0
