--- a/backend/codingpup/requirements.txt
+++ b/backend/codingpup/requirements.txt
@@ -7,11 +7,13 @@ charset-normalizer==3.1.0
 cryptography==41.0.1
 distro==1.8.0
 Django==4.2
+django-cors-headers==4.1.0
 django-phonenumber-field==7.0.2
 django-phonenumbers==1.0.1
 django-rest-framework==0.1.0
 django-rest-passwordreset==1.3.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 docker==6.1.3
 docker-compose==1.29.2
 dockerpty==0.4.1
@@ -28,6 +30,7 @@ Pillow==9.5.0
 psycopg2-binary==2.9.6
 pycparser==2.21
 Pygments==2.15.1
+PyJWT==2.7.0
 PyNaCl==1.5.0
 pyrsistent==0.19.3
 python-dotenv==0.21.1
